feat: phase 4 polish — SequencedCollection, RestClient, NullMarked, ProblemDetail, cleanup
4.1 Replace get(0)/get(size()-1) with getFirst()/getLast() throughout;
    PlayerService.loadPlayerProfile() now throws NoSuchElementException
    with context instead of implicit IndexOutOfBoundsException
4.2 JteWarmup migrated from RestTemplate to RestClient
4.3 package-info.java with @NullMarked added to all 10 packages
4.4 ErrorResponse removed; GlobalApiExceptionHandler and PlayersApiController
    return ProblemDetail (RFC 7807); tests updated from $.error to $.detail
4.5 PlayerService.dtbIdRange() uses integer arithmetic instead of Math.pow;
    bucket4j jdk21 artifact verified absent for 8.19.0, jdk17 retained